--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,32 @@ body {
   margin: 0;
   font-family: "Roboto", sans-serif;
 }
+
+.canvasContainer {
+  border: 5px solid #000000;
+}
+
+.col {
+  display: flex;
+  flex-direction: column;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex: none;
+}
+
+.btn {
+  display: flex;
+  border: 5px solid #000000;
+  padding: 12px;
+  cursor: pointer;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  color: #000;
+  background: #fff;
+  font-weight: 500;
+}
