--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,6 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
-.canvasContainer {
-  border: 5px solid #000000;
-}
-
 .col {
   display: flex;
   flex-direction: column;
@@ -18,6 +14,14 @@ body {
   flex-direction: row;
   justify-content: center;
   flex: none;
+}
+
+.row:not(:last-child) {
+  margin-bottom: 12px;
+}
+
+.sketch {
+  border: 5px dashed #000000;
 }
 
 .btn {
@@ -31,4 +35,9 @@ body {
   color: #000;
   background: #fff;
   font-weight: 500;
+}
+
+.btn:hover {
+  background-color: #000;
+  color: #fff;
 }
