--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,10 @@ body {
   margin-bottom: 12px;
 }
 
+.row button:not(:last-child) {
+  margin-right: 12px;
+}
+
 h1 {
   text-align: center;
   text-transform: uppercase;
