--- a/src/index.css
+++ b/src/index.css
@@ -28,17 +28,12 @@ h1 {
   text-align: center;
   text-transform: uppercase;
   letter-spacing: 2px;
-}
-
-.sketch {
-  width: 360px;
-  height: 360px;
-  border: 5px dashed #000000;
+  color: rgb(152, 37, 251);
 }
 
 .btn {
   display: flex;
-  border: 5px solid #000000;
+  border: 4px solid #000000;
   padding: 12px;
   cursor: pointer;
   text-decoration: none;
